--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -79,9 +79,9 @@ jobs:
       env:
         CC: clang
       run: |
-        export PATH=$PATH:$HOME/.local/bin
-        cd build/test
-        ctest
+        export FHATOS_HOME=${{github.workspace}}
+        export PATH=$PATH:$HOME/.local/bin:$FHATOS_HOME/bin
+        sudo -E bin/fhat-dev test native -DCHECK_INTERNET=OFF -DUSE_PAHO_MQTT_HACK=ON -DBUILD_TESTS=ON
 
 #  chmod 777 bin/fhat-dev
   #        sudo bin/fhat-dev build
