--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,34 @@ description = A Distributed Operating System for ESP32 and ESP8266 Microcontroll
 extra_configs = .wifi.ini
 boards_dir = boards
 
+#####################################
+##### ESP32/ESP8266 BUILD FLAGS #####
+#####################################
+
+[wifi]
+build_flags =
+    ${wifi.build_flags}
+    -DCONFIG_WIFI_LWIP_ALLOCATION_FROM_SPIRAM_FIRST=1
+    -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
+    -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
+    -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
+
+[bluetooth]
+build_flags =
+    -DCONFIG_BT_SPP_ENABLED=1
+    -DCONFIG_BT_BLUEDROID_ENABLED=1
+    -DCONFIG_BT_ENABLED=1
+    -DCONFIG_BT_CLASSIC_ENABLED=1
+
+[psram]
+build_flags =
+    -DBOARD_HAS_PSRAM
+    -DSPIRAM_USE_MALLOC=1
+    -DCONFIG_SPIRAM_USE=1
+# default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=512
+    -DFOS_EXTERNAL_MEMORY_LIMIT=512
+
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
 ######################################
@@ -23,6 +51,8 @@ build_flags =
     -DUNITY_INCLUDE_PRINT_FORMATTED
     -Ibuild/_deps/ordered_map-src/include/
     -mtext-section-literals
+    -DFOS_NAME=FhatOS
+    -DFOS_VERSION=0.1-alpha
 
 [esp32]
 platform = espressif32
@@ -48,12 +78,9 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
+    ${wifi.build_flags}
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
-    -DCONFIG_WIFI_LWIP_ALLOCATION_FROM_SPIRAM_FIRST=1
-    -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
-    -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
-    -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
     -DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
     -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
     -DCONFIG_ADC_CAL_LUT_ENABLE=0
@@ -72,22 +99,9 @@ build_flags =
     #####################################
     -DFOS_ESP_THREAD_STACK_SIZE=16384
     -DFOS_ESP_FIBER_STACK_SIZE=16384
+    -DCMAKE_SYSTEM=espressif32/arduino
 
-[psram]
-build_flags =
-    -DBOARD_HAS_PSRAM
-    -DSPIRAM_USE_MALLOC=1
-    -DCONFIG_SPIRAM_USE=1
-    # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=512
-    -DFOS_EXTERNAL_MEMORY_LIMIT=512
 
-[bluetooth]
-build_flags =
-    -DCONFIG_BT_SPP_ENABLED=1
-    -DCONFIG_BT_BLUEDROID_ENABLED=1
-    -DCONFIG_BT_ENABLED=1
-    -DCONFIG_BT_CLASSIC_ENABLED=1
 
 [esp8266]
 platform = espressif8266
@@ -188,6 +202,7 @@ build_flags =
     ${bluetooth.build_flags}
     ############# FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_s3_pro
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
 
 
 [env:esp32-s3-mini]
@@ -198,6 +213,7 @@ build_flags =
     ${psram.build_flags}
 #   ############ FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_s3
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
 
 [env:esp32-t7-s3]
 extends = esp32
@@ -208,6 +224,7 @@ build_flags =
     ${bluetooth.build_flags}
 #   ############ FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_s3
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
 
 
 [env:esp32-s2]
@@ -218,6 +235,7 @@ build_flags =
     ${psram.build_flags}
     ############# FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_s2
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
 
 ###########################################
 ############ RASBERRY PI ZERO #############
