--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -100,11 +100,12 @@
                         # UNITY_BUILD ON
                         UNITY_BUILD_MODE BATCH
                         UNITY_BUILD_BATCH_SIZE 16)
-                IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
-                    #TARGET_COMPILE_OPTIONS(${PACKAGE_TEST} PUBLIC -fsanitize=address)
-                    #TARGET_LINK_OPTIONS(${PACKAGE_TEST} PUBLIC -fsanitize=address)
-                    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
-                    #TARGET_LINK_OPTIONS(${PACKAGE_TEST} BEFORE PUBLIC -fsanitize=undefined PUBLIC -fsanitize=address)
+                STRING(TOLOWER CMAKE_BUILD_TYPE cmake_build_type_lower)
+                IF(SANITIZER AND cmake_build_type_lower STREQUAL "debug")
+                    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
+                    MESSAGE(NOTICE "  ${.m}.${.r}-${.y}= ${.g}Using Address Sanitizer${.c} =${.r}-${.m}.${..}\n")
+                ELSE()
+                    MESSAGE(NOTICE "  ${.m}.${.g}-${.y}= ${.r}NOT Using Address Sanitizer${.y} =${.g}-${.m}.${..}\n")
                 ENDIF()
                 ADD_TEST(${PACKAGE_TEST} ${CMAKE_BINARY_DIR}/test/build/${PACKAGE_TEST}.out)
                 SET_TESTS_PROPERTIES(${PACKAGE_TEST} PROPERTIES TIMEOUT 20)
