--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -53,10 +53,7 @@ jobs:
     - name: Install MQTT C Library
       working-directory: ${{github.workspace}}
       run: |
-        git clone https://github.com/eclipse/paho.mqtt.c.git
-        cd paho.mqtt.c
-        make
-        sudo make install
+        sudo apt-get install libpaho-mqtt-dev
 
     - name: Fhat-Dev Build
       working-directory: ${{github.workspace}}
