--- a/platformio.ini
+++ b/platformio.ini
@@ -33,8 +33,8 @@ build_flags =
     -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_USE=1
 # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=512
-    -DFOS_EXTERNAL_MEMORY_LIMIT=512
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=256
+    -DFOS_EXTERNAL_MEMORY_LIMIT=256
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -57,7 +57,6 @@ build_flags =
 [esp32]
 platform = espressif32
 #upload_flags = --no-stub
-#board_build.partitions = partition/large_code.csv
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
@@ -208,6 +207,7 @@ build_flags =
 [env:esp32-s3-mini]
 extends = esp32
 board = lolin_s3_mini
+board_build.partitions = partition/large_code.csv
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
