--- a/platformio.ini
+++ b/platformio.ini
@@ -6,11 +6,14 @@
 name = FhatOS
 description = A Distributed Operating System for ESP32 and ESP8266 Microcontrollers
 extra_configs = .wifi.ini
-boards_dir = boards
+boards_dir = board
 
 #####################################
 ##### ESP32/ESP8266 BUILD FLAGS #####
 #####################################
+
+[partition]
+large_code = board/partition/large_code.csv
 
 [wifi]
 build_flags =
@@ -80,13 +83,13 @@ build_flags =
     ${wifi.build_flags}
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
-    -DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-    -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-    -DCONFIG_ADC_CAL_LUT_ENABLE=0
-    -DCONFIG_LWIP_IPV6=0
-    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
-    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=4096
+    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
+    #-DCONFIG_LWIP_IPV6=0
+    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
+    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
+    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=4096
     # default 65536
     -DSET_LOOP_TASK_STACK_SIZE=4096
     ###############################
@@ -103,7 +106,7 @@ build_flags =
 
 
 [esp8266]
-platform = espressif8266
+platform = espressif826
 board = ${boards.esp8266.d1_mini}
 upload_speed = 512000
 monitor_speed = ${common.monitor_speed}
@@ -160,6 +163,65 @@ upload_protocol = esptool
 upload_protocol = espota
 upload_port = 192.168.88.224
 
+###########################################
+################## ESP32 ##################
+###########################################
+[env:esp32-s2-mini]
+extends = esp32
+upload_flags = --no-stub
+board = lolin_s2_mini
+board_build.partitions = ${partition.large_code}
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+#   ############ FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s2_mini
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+
+[env:esp32-s3-pro]
+extends = esp32
+board = lolin_s3_pro
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    ${bluetooth.build_flags}
+    ############# FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s3_pro
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+
+
+[env:esp32-s3-mini]
+extends = esp32
+board = lolin_s3_mini
+board_build.partitions = ${partition.large_code}
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+#   ############ FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_s3_mini
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+
+[env:esp32-t7-s3]
+extends = esp32
+board = lilygo_t7_s3
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    ${bluetooth.build_flags}
+#   ############ FHATOS #############
+    -DFOS_MACHINE_NAME=fhatos_esp32_t7_s3
+    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+
+###########################################
+############ RASBERRY PI ZERO #############
+###########################################
+[env:rpi]
+platform = raspberrypi
+board = pico
+framework = arduino
+#platform_packages =
+#    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
+
 ############################################
 ################## NATIVE ##################
 ############################################
@@ -188,61 +250,3 @@ test_ignore =
 #language/test_binary_obj
 #process/router/test_router
 #process/actor/test_actor
-
-###########################################
-################## ESP32 ##################
-###########################################
-[env:esp32-s3-pro]
-extends = esp32
-board = lolin_s3_pro
-build_flags =
-    ${esp32.build_flags}
-    ${psram.build_flags}
-    ${bluetooth.build_flags}
-    ############# FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s3_pro
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
-
-
-[env:esp32-s3-mini]
-extends = esp32
-board = lolin_s3_mini
-board_build.partitions = partition/large_code.csv
-build_flags =
-    ${esp32.build_flags}
-    ${psram.build_flags}
-#   ############ FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s3
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
-
-[env:esp32-t7-s3]
-extends = esp32
-board = lilygo_t7_s3
-build_flags =
-    ${esp32.build_flags}
-    ${psram.build_flags}
-    ${bluetooth.build_flags}
-#   ############ FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s3
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
-
-
-[env:esp32-s2]
-extends = esp32
-board = lolin_s2_mini
-build_flags =
-    ${esp32.build_flags}
-    ${psram.build_flags}
-    ############# FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s2
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
-
-###########################################
-############ RASBERRY PI ZERO #############
-###########################################
-[env:rpi]
-platform = raspberrypi
-board = pico
-framework = arduino
-#platform_packages =
-#    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
