have esp32 and native working with new obj/thread model. so much code deleted.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,11 @@ boards_dir = board
 [partition]
 large_code = board/partition/large_code.csv
 
+[log]
+build_flags =
+    -DCONFIG_LOG_DEFAULT_LEVEL_VERBOSE=1
+    -DCONFIG_LOG_MASTER_LEVEL=1
+
 [wifi]
 build_flags =
     ${wifi.build_flags}
@@ -36,8 +41,8 @@ build_flags =
     -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_USE=1
 # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=256
-    -DFOS_EXTERNAL_MEMORY_LIMIT=256
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=16
+    -DFOS_EXTERNAL_MEMORY_LIMIT=16
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -99,7 +104,7 @@ build_flags =
     #####################################
     ### FHATOS-SPECIFIC CONFIGURATION ###
     #####################################
-    -DFOS_ESP_THREAD_STACK_SIZE=16384
+    -DFOS_ESP_THREAD_STACK_SIZE=32768
     -DFOS_ESP_FIBER_STACK_SIZE=16384
     -DCMAKE_SYSTEM=espressif32/arduino
 
@@ -207,8 +212,8 @@ board = lilygo_t7_s3
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    ${bluetooth.build_flags}
-#   ############ FHATOS #############
+    #${bluetooth.build_flags}
+    ############ FHATOS #############
     -DFOS_MACHINE_NAME=fhatos_esp32_t7_s3
     -DCMAKE_SYSTEM_PROCESSOR=${this.board}
 
